syntax = "proto3";

package hipmodel;

import "tensor.proto";

message NameError {
  uint32 version = 1;
  float distance = 2;
  hipmodel.Tensor closest_pattern = 3;
}

option go_package = "pkg/hipmodel";
